[tool.poetry]
name = "fastapi-todobb"
version = "0.1.0"
description = ""
authors = ["asif-langrah <ak.development.pk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlmodel = "^0.0.16"
psycopg = "^3.1.18"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg-binary = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
